# perferox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  arch.md  pyproject.toml  structures.md  tests.py
.github/workflows/: ci.yml
perferox/: __init__.py  agent_runner.py  auth.py  bench.py  cli.py  db.py  init-db.sql  main_agent.py  process_host.py  prompts.py  remote.py  semantic.py  status.py  subagent.py  tools.py  tui.py
