[project]
name = "perferox"
version = "0.1.0"
description = "Agentic benchmark explorer for SGLang."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain",
  "langgraph",
  "langchain-openai",
  "textual",
  "paramiko",
  "pydantic",
  "numpy",
  "sentence-transformers>=5.6.0",
]

[project.scripts]
perferox = "perferox.cli:main"

[tool.uv]
package = true

[tool.ruff]
preview = true
target-version = "py311"
line-length = 150
indent-width = 2

[tool.ruff.format]
exclude = ["*"]
