[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perferox"
version = "0.1.0"
description = "Agentic benchmark explorer for SGLang."
readme = "PYPI.md"
requires-python = ">=3.11"
authors = [{ name = "Naman Chetwani" }]
keywords = ["sglang", "benchmark", "fuzzing", "inference", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "lambda-labs",
  "langchain",
  "langgraph",
  "langchain-openai",
  "rich",
  "textual",
  "paramiko",
  "pydantic",
  "numpy",
  "sentence-transformers>=5.6.0",
]

[project.scripts]
perferox = "perferox.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
lambda-labs = { path = "packages/lambda-labs", editable = true }

[tool.setuptools.packages.find]
include = ["perferox*"]

[tool.setuptools.package-data]
perferox = ["init-db.sql", "perferox-tui-demo.gif", "sglang_docs/perferox-docs.sqlite"]

[tool.ruff]
preview = true
target-version = "py311"
line-length = 150
indent-width = 2

[tool.ruff.format]
exclude = ["*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
